Prod/src/objects/Version_Launch_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Version Launch Setting</label>
    <pluralLabel>Version Launch Settings</pluralLabel>
</CustomObject>